* Fixed alignment problems with loadingSpinner

--- a/src/app/components/components/loading-spinner/loading-spinner.component.css
+++ b/src/app/components/components/loading-spinner/loading-spinner.component.css
@@ -1,5 +1,6 @@
 :host {
-
+  height: 100% !important;
+  width: 100% !important;
 }
 
 @keyframes ldio-grpalgk08m7 {
